@@ -244,7 +244,7 @@ jackctl_parse_driver_params (jackctl_driver *driver_ptr, int argc, char* argv[])
   
     const JSList * driver_params = jackctl_driver_get_parameters(driver_ptr);
     if (driver_params == NULL)
-	return 1;
+        return 1;
 
     jack_driver_desc_t * desc = jackctl_driver_get_desc(driver_ptr); 
 
@@ -295,30 +295,30 @@ jackctl_parse_driver_params (jackctl_driver *driver_ptr, int argc, char* argv[])
             }
 
             fprintf (stderr, "Options for driver '%s':\n", desc->name);
-            jack_print_driver_options (desc, stderr);
-            exit (1);
+            jack_print_driver_options(desc, stderr);
+            return 1;
         }
 
         node_ptr = (JSList *)driver_params;
        	while (node_ptr) {
-	    param = (jackctl_parameter_t*)node_ptr->data; 
- 	    if (opt == jackctl_parameter_get_id(param)) {
-	        break;
-	    }
-	    node_ptr = node_ptr->next;
-	}
+            param = (jackctl_parameter_t*)node_ptr->data; 
+            if (opt == jackctl_parameter_get_id(param)) {
+                break;
+            }
+            node_ptr = node_ptr->next;
+        }
 
         if (!optarg && optind < argc &&
-                strlen(argv[optind]) &&
-                argv[optind][0] != '-') {
+            strlen(argv[optind]) &&
+            argv[optind][0] != '-') {
             optarg = argv[optind];
         }
 
         if (optarg) {
             switch (jackctl_parameter_get_type(param)) {
-                case JackDriverParamInt:              
+                case JackDriverParamInt:  
                     value.i = atoi (optarg);
-		    jackctl_parameter_set_value(param, &value);
+                    jackctl_parameter_set_value(param, &value);
                     break;
                 case JackDriverParamUInt:
                     value.ui = strtoul (optarg, NULL, 10);
@@ -333,7 +333,6 @@ jackctl_parse_driver_params (jackctl_driver *driver_ptr, int argc, char* argv[])
                     jackctl_parameter_set_value(param, &value);
                     break;
                 case JackDriverParamBool:
-
                     /*
                      if (strcasecmp ("false", optarg) == 0 ||
                          strcasecmp ("off", optarg) == 0 ||
@@ -343,10 +342,10 @@ jackctl_parse_driver_params (jackctl_driver *driver_ptr, int argc, char* argv[])
                     */
                     // steph
                     if (strcmp ("false", optarg) == 0 ||
-                            strcmp ("off", optarg) == 0 ||
-                            strcmp ("no", optarg) == 0 ||
-                            strcmp ("0", optarg) == 0 ||
-                            strcmp ("(null)", optarg) == 0 ) {
+                        strcmp ("off", optarg) == 0 ||
+                        strcmp ("no", optarg) == 0 ||
+                        strcmp ("0", optarg) == 0 ||
+                        strcmp ("(null)", optarg) == 0 ) {
                         value.i = false;
                     } else {
                         value.i = true;
@@ -359,13 +358,13 @@ jackctl_parse_driver_params (jackctl_driver *driver_ptr, int argc, char* argv[])
                 value.i = true;
             } else {
                 value = jackctl_parameter_get_default_value(param);
-		jackctl_parameter_set_value(param, &value);
-            }            
+            }  
+            jackctl_parameter_set_value(param, &value);
         }
     }
 
-    free (options);
-    free (long_options);
+    free(options);
+    free(long_options);
     return 0;
 }
 
